# PWEngine

./: .gitignore  AGENTS  CLA-INDIVIDUAL.md  CLAUDE  CODING_GUIDELINES.md  CONTRIBUTING.md  README.md  RULE.md  STORY.md  VERSION
.github/workflow/: cla.yml
Documents/: Index.html  NameRule.md  PWEnginedrawio.drawio  code.html  styles.css
Documents/Page/: 1.1.html
Documents/QuickStart/: 1.ReadyYourEnvironment.md  2.YourFirstWindow.md  3.DrawBasicThingInCanvas.md
PWEngine/: .gitignore  build.sh  xmake.lua
PWEngine/include/: PWECore.hpp  PWEObject.hpp  PWEType.hpp
PWEngineC/: xmake.lua
PWEngineC/include/: PWEngineCAPI.h  PWVMT.h
PWEngineC/src/CAPI/: Core.c  main.c
PWEngineCAPI/: xmake.lua
PWEngineCAPI/include/: PWEngineCAPI.h  PWVMT.h
PWEngineCAPI/src/CAPI/: engine.c  surface.c  test.c
PWEngineCpp/: build.sh  compile_commands.json  xmake.lua
PWEngineCpp/include/: PWECore.hpp  PWEVecMat.hpp
PWEngineCpp/src/: main.cpp
PWEngineRust/: Cargo.toml  build.rs  build.sh
PWEngineRust/lib/: PWEngineCAPI.h  PWVMT.h  libPWEngineCAPI.dylib
PWEngineRust/src/: main.rs
PWEngineRust/src/core/: asset.rs  engine.rs  mod.rs  scene.rs  surface.rs  window.rs
PWEngineRust/src/utils/: config.rs  config_template.json  log.rs  mod.rs  vec.rs
PWLibrary/BindCpp/: build.sh
PWLibrary/CExport/: .gitignore  xmake.lua
PWLibrary/Core/: .clangd  .gitignore  compile_commands.json  xmake.lua
PWLibrary/PWEngineCpp/: .gitignore  compile_commands.json  xmake.lua
PWLibrary/PWLibrary/: xmake.lua
Test/: .gitignore
Test/Demo/: build.sh  compile_commands.json  xmake.lua
(+63 files in other folders)
